syntax = "proto3";

package enclave_rpc;

message Request {
    // Request method.
    string method = 1;
    // Payload (must be valid Protocol Buffers, based on given method).
    bytes payload = 2;
    // Starting state, encrypted (must decrypt to valid Protocol Buffers, based on contract).
    bytes encrypted_state = 3;
    // %%% Starting state  (must be valid Protocol Buffers, based on contract).
    bytes state = 103;
}

message Error {
    // Error message.
    string message = 1;
}

message Response {
    enum Code {
        INVALID = 0;

        // 2xx indicades success.
        SUCCESS = 200;

        // 4xx indicates errors.
        ERROR = 400;
        ERROR_BAD_REQUEST = 401;
        ERROR_METHOD_NOT_FOUND = 402;
    }
    // Response code.
    Code code = 1;
    // Payload (must be valid Protocol Buffers, based on given method).
    bytes payload = 2;
    // New state, encrypted (must decrypt to valid Protocol Buffers, based on contract).
    bytes encrypted_state = 3;
    // %%% New state (must be valid Protocol Buffers, based on contract).
    bytes state = 103;
}

// Meta methods.
message MetadataRequest {
}

message MetadataResponse {
    // Contract name.
    string name = 1;
    // Contract version.
    string version = 2;
}
